style.css
/* ... */
footer .footer_main .tag a i{
    padding: 0 10px;
    transition: 0.3;
}

footer .footer_main .tag a i:hover{
    color: #c72092;
}

footer .footer_main .tag .social_link{
    display: flex;
}

footer .footer_main .tag .social_link a{
    width: 30px;
    height: 30px;
    border-radius: 50%;
    text-align: center;
    text-decoration: none;
    color: black;
    box-shadow: 0 0 20px 10px rgba(0,0,0,0.05);
    position: relative;
    margin: 0 5px;
    z-index: 10;
    overflow: hidden;
}

footer .footer_main .tag .social_link a .fa-brands{
    font-size: 15px;
    line-height: 30px;
    z-index: 10;
    position: relative;
    transition: 0.5s;
}

footer .footer_main .tag .social_link a:hover i{
    color: white;
}

footer .footer_main .tag .social_link a::after{
    content: '';
    width: 100%;
    height: 100%;
    top: 0;
    left: -90px;
    background: linear-gradient(-45deg, #c72092 , #6c14d0);
    position: absolute;
    z-index: -10;
    transition: 0.5s;
}

footer .footer_main .tag .social_link a:hover::after{
    left: 0;
}

footer .footer_main .tag .search_bar{
    width: 230px;
    height: 30px;
    background: rgb(202, 202, 202);
    border-radius: 25px;
}

footer .footer_main .tag .search_bar input{
    width: 200px;
    padding: 2px 0;
    position: relative;
    top: 17%;
    left: 6%;
    border: none;
    background: none;
    outline: none;
    font-size: 13px;
}

footer .footer_main .tag .search_bar button{
    padding: 7px 15px;
    background: linear-gradient(to right, #c72092 , #6c14d0);
    border: none;
    margin-top: 15px;
    border-radius: 25px;
    color: white;
    cursor: pointer;
}

@media (max-width: 1024px){
    .products .box{
        grid-template-columns: 1fr 1fr;
        justify-items: center;
    }
}

@media (max-width: 768px){

    section{
        height: auto;
        padding-bottom: 60px;
    }

    .products{
        height: auto;
    }

    .about{
        height: auto;
    }

    .review{
        height: auto;
    }

    .login_form{
        height: auto;
        flex-direction: column;
        padding: 40px 0;
    }

    .login_form .left img{
        width: 90%;
    }

    .login_form .right{
        position: static;
        padding: 30px;
    }

    .products .box{
        grid-template-columns: 1fr;
    }

    .products .box .card{
        width: 90%;
    }

    .about .about_main{
        flex-direction: column;
        top: 0;
        left: 0;
        transform: none;
    }

    .about .about_main .about_text p{
        width: 90%;
    }

    .review .review_box{
        flex-direction: column;
        top: 0;
    }

    .services .services_cards{
        flex-direction: column;
        gap: 30px;
        width: 100%;
    }

    footer .footer_main{
        flex-direction: column;
        align-items: center;
        text-align: center;
        padding: 30px 0;
    }

    footer .footer_main .tag{
        margin-bottom: 20px;
    }

}


html, body{
    overflow-x: hidden;
}

footer{
    margin-bottom: 0;
    padding-bottom: 0;
}

section:last-child{
    margin-bottom: 0;
}

